Sua lai phan Hero

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                     I'm
                     <span
                         class="typed sub-title"
-                        data-typed-items="a Developer, an Engineer, a Trader"
+                        data-typed-items="a Developer, an Engineer, an Investor"
                     ></span>
                 </p>
             </div>
