Change color Hero

--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
             .title {                
                 color: transparent !important;       
                 background-color: #ffeaf1 !important; 
-                background-image: linear-gradient(78deg, #ffeaf1 26%, #47e5de 42%) !important; 
+                background-image: linear-gradient(135deg, #ffeaf1 50%, #47e5de 30% ) !important; 
                 background-clip: text !important; 
                 -webkit-background-clip: text !important;   
             }
             .sub-title {
-                color: #f75802 !important;  
+                color: #ee130bdd !important;  
             }           
             y
             
@@ -155,11 +155,11 @@
         <!-- ======= Hero Section ======= -->
         <section
             id="hero"
-            class="d-flex flex-column justify-content-center align-items-center"
+            class="d-flex flex-column justify-content-center align-items-center active"
         >
             <div class="hero-container" data-aos="fade-in">
                 <h1 class="title highlight-text">Le Dang Thuyet</h1>
-                <p class="highlight-text">
+                <p class="highlight-text">  
                     I'm
                     <span
                         class="typed sub-title"
