--- a/vidu.html
+++ b/vidu.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="./vidu.js"></script>
     <style>
         .highlight-text {
             position: relative; /* Để có khung thực sự cho lớp nền */
