--- a/index.html
+++ b/index.html
@@ -489,9 +489,34 @@
                                     ></a>
                                 </div>
                             </div>
-                        </div>
-
-                                                     
+                        </div>  
+                        
+                         <!-- ==== Thankyou Letter =====-->                        
+                         <div
+                         class="col-lg-4 col-md-6 portfolio-item filter-app"
+                     >
+                         <div class="portfolio-wrap">
+                             <img
+                                 src="./assets/img/portfolio/thankyou_2.png"
+                                 class="img-fluid"
+                                 alt=""
+                             />
+                             <div class="portfolio-links">
+                                 <a
+                                     href="./assets/img/portfolio/thankyou_2.png"
+                                     data-gallery="portfolioGallery"
+                                     class="portfolio-lightbox"
+                                     title="Solar System"
+                                     ><i class="bx bx-plus"></i
+                                 ></a>
+                                 <a
+                                     href="./portfolio/thankyou_letter.html"
+                                     title="Thank You Letter"
+                                     ><i class="bx bx-link"></i
+                                 ></a>
+                             </div>
+                         </div>
+                     </div>  
                     </div>
                 </div>
             </section>
@@ -615,7 +640,7 @@
         ><i class="bi bi-arrow-up-short"></i
         ></a>
 
-        <!-- Vendor JS Files -->
+        <!-- JS Files -->
         <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
         <script src="assets/vendor/aos/aos.js"></script>
         <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -626,7 +651,7 @@
         <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
         <script src="assets/vendor/php-email-form/validate.js"></script>
 
-        <!-- Template Main JS File -->
-        <script src="assets/js/main.js"></script>
+        <!-- Main JS File -->
+        <script src="assets/js/app.js"></script>
     </body>
 </html>
