--- a/portfolio/landing_page.html
+++ b/portfolio/landing_page.html
@@ -269,6 +269,6 @@
         <script src="../assets/vendor/php-email-form/validate.js"></script>
 
         <!-- Template Main JS File -->
-        <script src="../assets/js/main.js"></script>
+        <script src="../assets/js/app.js"></script>
     </body>
 </html>
