--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
                                         <span class="highlight-2">Hoiana - 2020</span> : Employee of the Year - Engineer Department.
                                     </li>
                                     <li>
-                                        <span class="highlight-2">FDC - CTC group - 2012</span>  : Best Employee of the Year - Equipment Department.
+                                        <span class="highlight-2">CTC group - 2018</span>  : Best Employee of the Year - Equipment Department.
                                     </li>
                                                                       
                                 </ul>
